--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,11 +4,7 @@
        {{ partial "portfolio/skills.html" . }}
    {{ end }}
    {{ if .Site.Params.showProjects }}
-      {{ with .Site.GetPage "section" "projects/biology" }}
-         {{ .Scratch.Set "sectionId" "projects" }}
-         {{ partial "sectionSummary" . }}
-      {{ end }}
-      {{ with .Site.GetPage "section" "projects/robotics" }}
+      {{ with .Site.GetPage "section" "projects" }}
          {{ .Scratch.Set "sectionId" "projects" }}
          {{ partial "sectionSummary" . }}
       {{ end }}
