--- a/layouts/partials/sectionSummary.html
+++ b/layouts/partials/sectionSummary.html
@@ -12,8 +12,7 @@
   </div>
   {{ if gt .Pages $featuredPages }}
     <div class="my-auto">
-      <h3>Wait! There's more..</h3>
-      <p>See <a href="{{ .Permalink }}">all {{ .Title | pluralize }}</a> for more examples!</p>
+      <h3>See <a href="{{ .Permalink }}">all {{ .Title | pluralize }}</a>...</h3>
     </div>
   {{ end }}
 </section>
